added cookies related functions
